--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "vue3-todo-list",
   "version": "0.0.0",
+  "homepage": "./",
   "scripts": {
     "dev": "vite",
     "build": "vite build"
@@ -9,7 +10,7 @@
     "vue": "^3.0.0-rc.1"
   },
   "devDependencies": {
-    "vite": "^1.0.0-rc.1",
-    "@vue/compiler-sfc": "^3.0.0-rc.1"
+    "@vue/compiler-sfc": "^3.0.0-rc.1",
+    "vite": "^1.0.0-rc.13"
   }
 }
